--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build", 
+        "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
         "axios": "^1.1.2",
@@ -11,4 +12,5 @@
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
     }
+    
 }
